--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pr13",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "mongoose": "^7.3.4"
   },
   "devDependencies": {
