--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "Eternal Side",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "celebrate": "^15.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "mongoose": "^7.3.4"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
