--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4",
-    "validator": "^13.11.0"
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
